bad/incr_binop_mul.example_compiler_output
ERROR
[1mbad/incr_binop_mul.lat:5:9: [1;31merror: [0;1mexpression is not assignable[m
	(x * y)++;
	       [1;32m^[m
[1mbad/incr_binop_mul.lat:5:2: [1;34mnote: [0;1mexpression starts here[m
	(x * y)++;
	[1;32m^[m
